# words_to_speech

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile.dev  pyproject.toml  requirements.txt
backend/app/adapters/inbound/: api_router.py
backend/app/adapters/outbound/: azure_foundry_llm_adapter.py  azure_speech_tts_adapter.py  local_audio_storage.py
backend/app/application/: dto.py
backend/app/application/services/: audio_concatenator.py
backend/app/application/use_cases/: combine_history_audio.py  generate_word_audio.py  generate_words_batch.py
backend/app/domain/: entities.py  exceptions.py  ports.py  value_objects.py
backend/app/infrastructure/: config.py  container.py  main.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_router.py
backend/tests/unit/: test_combine_history_audio.py  test_entities.py  test_generate_word_audio.py  test_value_objects.py
frontend/: Dockerfile.dev  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AudioPlayer.jsx  CombinedAudioCard.jsx  HistoryList.jsx  WordCard.jsx  WordInput.jsx
frontend/src/hooks/: useGenerateWord.js
frontend/src/services/: api.js  audioDownload.js
frontend/src/styles/: globals.css
