[project]
name = "wordsound-backend"
version = "0.1.0"
description = "WordSound backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "openai>=1.40.0,<2.0.0",
  "azure-cognitiveservices-speech>=1.41.1,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

